@@ -1,0 +1,164 @@
+Target Distance: 25, Step Size: 2
+0: (x,y) = (0, 0)
+1: (x,y) = (-1.364, 1.46271)
+2: (x,y) = (-0.880153, 3.4033)
+3: (x,y) = (-2.19227, 1.89388)
+4: (x,y) = (-0.193489, 1.96368)
+5: (x,y) = (1.73836, 1.44604)
+6: (x,y) = (-0.261333, 1.48095)
+7: (x,y) = (-2.12849, 2.19768)
+8: (x,y) = (-0.414159, 3.22776)
+9: (x,y) = (-1.2594, 1.41514)
+10: (x,y) = (0.739386, 1.48494)
+11: (x,y) = (2.17807, 2.87426)
+12: (x,y) = (2.62797, 0.925517)
+13: (x,y) = (3.44144, -0.901573)
+14: (x,y) = (1.4927, -1.35148)
+15: (x,y) = (0.775965, -3.21864)
+16: (x,y) = (2.77109, -3.35815)
+17: (x,y) = (4.66213, -4.00929)
+18: (x,y) = (6.2594, -5.21292)
+19: (x,y) = (5.38266, -3.41533)
+20: (x,y) = (4.17903, -1.81806)
+21: (x,y) = (3.66139, 0.113795)
+22: (x,y) = (1.79423, 0.830531)
+23: (x,y) = (3.30365, 2.14265)
+24: (x,y) = (4.24259, 3.90854)
+25: (x,y) = (4.55546, 1.93317)
+26: (x,y) = (3.52538, 3.6475)
+27: (x,y) = (5.52538, 3.6475)
+28: (x,y) = (5.76912, 5.63259)
+29: (x,y) = (7.61013, 6.41406)
+30: (x,y) = (7.57523, 8.41375)
+31: (x,y) = (7.50543, 6.41497)
+32: (x,y) = (5.69281, 7.26021)
+33: (x,y) = (4.07478, 6.08464)
+34: (x,y) = (3.79643, 4.1041)
+35: (x,y) = (1.85584, 3.62026)
+36: (x,y) = (0.570267, 5.15235)
+37: (x,y) = (0.154444, 7.10864)
+38: (x,y) = (-1.28424, 5.71932)
+39: (x,y) = (-3.01629, 6.71932)
+40: (x,y) = (-3.92427, 4.93731)
+41: (x,y) = (-5.82638, 5.55534)
+42: (x,y) = (-7.46468, 6.7025)
+43: (x,y) = (-5.68267, 7.61048)
+44: (x,y) = (-3.72638, 8.0263)
+45: (x,y) = (-1.7276, 7.9565)
+46: (x,y) = (-3.03971, 6.44708)
+47: (x,y) = (-4.82173, 5.5391)
+48: (x,y) = (-5.47286, 3.64807)
+49: (x,y) = (-6.05761, 5.56068)
+50: (x,y) = (-4.88204, 7.17871)
+51: (x,y) = (-6.70913, 7.99218)
+52: (x,y) = (-4.88204, 7.17871)
+53: (x,y) = (-5.29786, 9.135)
+54: (x,y) = (-7.27839, 8.85666)
+55: (x,y) = (-9.191, 8.27191)
+56: (x,y) = (-7.59373, 9.47554)
+57: (x,y) = (-9.4481, 10.2248)
+58: (x,y) = (-8.32972, 11.8828)
+59: (x,y) = (-6.5477, 10.9749)
+60: (x,y) = (-8.34529, 11.8516)
+61: (x,y) = (-10.0945, 10.882)
+62: (x,y) = (-9.4765, 8.97986)
+63: (x,y) = (-7.5359, 8.49602)
+64: (x,y) = (-9.51644, 8.77436)
+65: (x,y) = (-9.13482, 6.81111)
+66: (x,y) = (-10.0738, 8.57701)
+67: (x,y) = (-11.6281, 9.83565)
+68: (x,y) = (-10.9769, 7.94461)
+69: (x,y) = (-12.3662, 6.50593)
+70: (x,y) = (-14.3586, 6.33162)
+71: (x,y) = (-12.4565, 6.94965)
+72: (x,y) = (-12.1436, 4.97428)
+73: (x,y) = (-11.1436, 3.24222)
+74: (x,y) = (-11.422, 1.26169)
+75: (x,y) = (-10.804, 3.1638)
+76: (x,y) = (-11.1513, 1.19419)
+77: (x,y) = (-9.94762, 2.79146)
+78: (x,y) = (-11.923, 3.10433)
+79: (x,y) = (-13.1816, 4.65862)
+80: (x,y) = (-11.6056, 5.88994)
+81: (x,y) = (-13.0443, 7.27926)
+82: (x,y) = (-11.1124, 7.7969)
+83: (x,y) = (-9.55816, 6.53825)
+84: (x,y) = (-10.042, 4.59766)
+85: (x,y) = (-10.4578, 6.55396)
+86: (x,y) = (-10.7707, 4.57858)
+87: (x,y) = (-12.7707, 4.57858)
+88: (x,y) = (-11.1126, 5.69697)
+89: (x,y) = (-11.6639, 3.77444)
+90: (x,y) = (-9.898, 2.8355)
+91: (x,y) = (-11.1566, 1.28121)
+92: (x,y) = (-12.5709, 2.69542)
+93: (x,y) = (-10.8388, 1.69542)
+94: (x,y) = (-12.1509, 0.186004)
+95: (x,y) = (-13.463, 1.69542)
+96: (x,y) = (-11.4679, 1.83494)
+97: (x,y) = (-9.46821, 1.86984)
+98: (x,y) = (-7.77212, 2.92968)
+99: (x,y) = (-9.08423, 1.42026)
+100: (x,y) = (-11.0161, 1.9379)
+101: (x,y) = (-9.03555, 1.65955)
+102: (x,y) = (-8.31881, 3.52671)
+103: (x,y) = (-8.59716, 5.50725)
+104: (x,y) = (-8.80622, 7.49629)
+105: (x,y) = (-8.87602, 5.49751)
+106: (x,y) = (-8.09455, 7.33852)
+107: (x,y) = (-8.33829, 5.35343)
+108: (x,y) = (-8.88957, 7.27595)
+109: (x,y) = (-8.04433, 5.46334)
+110: (x,y) = (-10.0416, 5.56801)
+111: (x,y) = (-10.7583, 3.70085)
+112: (x,y) = (-9.78871, 5.45009)
+113: (x,y) = (-9.23743, 7.37261)
+114: (x,y) = (-7.54134, 8.43245)
+115: (x,y) = (-7.05749, 6.49186)
+116: (x,y) = (-6.50622, 8.41438)
+117: (x,y) = (-4.95193, 9.67302)
+118: (x,y) = (-6.31592, 11.1357)
+119: (x,y) = (-5.22664, 9.45839)
+120: (x,y) = (-6.61596, 10.8971)
+121: (x,y) = (-4.86672, 9.92745)
+122: (x,y) = (-2.91043, 9.51162)
+123: (x,y) = (-1.73486, 11.1297)
+124: (x,y) = (-3.72998, 11.2692)
+125: (x,y) = (-5.01556, 12.8013)
+126: (x,y) = (-3.75692, 14.3556)
+127: (x,y) = (-4.20682, 16.3043)
+128: (x,y) = (-6.13867, 15.7867)
+129: (x,y) = (-6.5545, 17.7429)
+130: (x,y) = (-8.32039, 16.804)
+131: (x,y) = (-9.97847, 17.9224)
+132: (x,y) = (-11.9782, 17.9573)
+133: (x,y) = (-13.9414, 17.5757)
+134: (x,y) = (-12.0504, 16.9245)
+135: (x,y) = (-10.196, 17.6738)
+136: (x,y) = (-8.31663, 16.9897)
+137: (x,y) = (-10.2799, 17.3713)
+138: (x,y) = (-9.22004, 15.6752)
+139: (x,y) = (-7.27945, 15.1914)
+140: (x,y) = (-5.68218, 16.395)
+141: (x,y) = (-5.30056, 18.3583)
+142: (x,y) = (-5.44007, 16.3631)
+143: (x,y) = (-6.87875, 14.9738)
+144: (x,y) = (-7.01827, 12.9787)
+145: (x,y) = (-5.62895, 11.54)
+146: (x,y) = (-7.30629, 12.6293)
+147: (x,y) = (-7.09723, 14.6183)
+148: (x,y) = (-6.22049, 12.8208)
+149: (x,y) = (-6.67039, 14.7695)
+150: (x,y) = (-4.70078, 15.1168)
+151: (x,y) = (-6.03904, 16.6031)
+152: (x,y) = (-7.96156, 16.0518)
+153: (x,y) = (-9.9421, 15.7735)
+154: (x,y) = (-11.7397, 14.8967)
+155: (x,y) = (-10.5925, 16.535)
+156: (x,y) = (-11.7681, 18.1531)
+157: (x,y) = (-12.218, 20.1018)
+After 158 steps, the subject has the following location:
+(x,y) = (-13.8153, 21.3054)
+ or
+(m,a) = (25.3926, 122.961)
+Average outward distance per step = 0.160713
